hands-on-networking/internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  annotations:
    cloud.google.com/load-balancer-type: "Internal" #set internal lb
  labels:
   app: web
spec:
  type: LoadBalancer
  #omitting loadBalancerIP to use emphemeral IP
  #omitting loadBalancerSourceRanges to use default IP range
  loadBalancerSourceRanges: 
  - 0.0.0.0/0
  ports:
  - name: nginx-1
    port: 9000
    protocol: TCP
  selector:
    app: web
